--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
-	<title>batata</title>
+	<link rel="stylesheet" href="style.css">
+	<title>Batata</title>
 </head>
 <body>
-	<p>Batata</p>
+	<div class="content_main">
+		<h1 id="title"> Batata </h1>
+			<audio src="assets/batatasong.mp3" controls>Sem suporte</audio>
+
+		<div class="content">
+			<img src="assets/batata.gif" alt="batata">
+		</div>
+	</div>
 </body>
 </html>
